FrontEnd/assets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

/** end reset css**/

@keyframes galleryFadeIn {
	0% { opacity: 0; }
	25% { opacity: 0; }
	100% { opacity: 1; }
}

:root {
	--portfolio-chart-buttons-bg-color: white;
	--portfolio-chart-buttons-bg-color-hover: rgb(231, 231, 231);
	--portfolio-chart-buttons-bg-is-active-color-hover: #184e44;
	--portfolio-chart-buttons-font-color: #1D6154;
	--portfolio-chart-error-box-bg-color: #611d1d;
	--portfolio-default-toast-bg-color: #333;
	--portfolio-default-toast-font-color: white;
	--portfolio-page-margin: 50px;
}

body {
	max-width: 1140px;
	min-height: 100vh;
	margin: auto;
	font-family: 'Work Sans', 'Syne', sans-serif;
	font-size: 14px;
	display: flex;
	flex-direction: column;
}

section {
	margin: var(--portfolio-page-margin) 0;
}

h1 {
	display: flex;
	flex-direction: column;
	font-family: 'Syne';
	font-size: 22px;
	font-weight: 800;
	color: #B1663C;
	line-height: 1em;
}

h1>span {
	position: relative;
	text-transform: uppercase;
	font-family: 'Work Sans';
	font-weight: 400;
	font-size: 10px;
	letter-spacing: 0.1em;
	transform: scale(0.92, 1);
	left: -8px;
}

h2 {
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154;
}

.introduction {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: calc(var(--portfolio-page-margin) * 2.5);
	margin-top: calc(var(--portfolio-page-margin) * 1.5);
}

.introduction figure {
	flex-basis: 53%;
}

.introduction img {
	display: block;
	height: auto;
	width: 474px;
}

.introduction article {
	flex-basis: 47%;
	max-width: 405px;
}

.introduction h2 {
	margin-bottom: 1em;
}

.introduction p {
	margin-bottom: 0.5em;
}

.main {
	width: 946px;
	margin: auto;
}

.portfolio h2 {
	text-align: center;
	margin-bottom: 1em;
}

.gallery {
	width: 100%;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-column-gap: 20px;
	grid-row-gap: 20px;
}

.gallery img {
	width: 100%;
}

.form {
	width: 50%;
	margin: auto;
}

.form>* {
	text-align: center;
}

.form h2 {
	margin-bottom: 20px;
}

.form form {
	text-align: left;
	display: flex;
	flex-direction: column;
}

.form input {
	height: 50px;
	font-size: 1.2em;
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

.form label {
	margin: 3em 0 0.5em 0;
}

.form textarea {
	border: none;
	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
}

.form input[type="submit"] {
	font-family: 'Syne';
	font-weight: 700;
	color: white;
	background-color: #1D6154;
	margin: 2em auto;
	width: 180px;
	text-align: center;
	margin-top: 35px;
	border-radius: 60px;
}

.form input:hover[type="submit"] {
	cursor: pointer;
}

footer nav ul {
	display: flex;
	justify-content: flex-end;
	margin: 2em;
}

/** Filters **/
.filter-by-category-component {
	display: flex;
	justify-content: center;
	gap: 0 1em;
	margin: 4em 0;
}

.btn {
	border: 1px solid var(--portfolio-chart-buttons-font-color);
	font-family: 'Syne';
	font-size: 1.15em;
	font-weight: 700;
	color: var(--portfolio-chart-buttons-font-color);
	background-color: var(--portfolio-chart-buttons-bg-color);
	text-align: center;
	border-radius: 60px;
	padding: 8px 1%;
	min-width: 100px;
}

.btn:hover {
	cursor: pointer;
	background-color: var(--portfolio-chart-buttons-bg-color-hover);
}

.btn.is-active:hover {
	cursor: pointer;
	background-color: var(--portfolio-chart-buttons-bg-is-active-color-hover);
}

.btn.is-active {
	color: var(--portfolio-chart-buttons-bg-color);
	background-color: var(--portfolio-chart-buttons-font-color);
}

/** Boxes **/
.prevent-select {
	user-select: none;
}

.is-box {
	background-color: var(--portfolio-chart-buttons-font-color);
	color: var(--portfolio-chart-buttons-bg-color);
	font-weight: 500;
	padding: 15px;
	border-radius: 15px;
	max-width: 45vw;
}

.is-box.error-box {
	background-color: var(--portfolio-chart-error-box-bg-color);
	color: var(--portfolio-chart-buttons-bg-color);
}

.gallery.failed-to-fetch {
	display: flex;
	justify-content: center;
}

/* Toasts */
.toasts-component>.is-toast:nth-child(1) { --nth-child: 1; }
.toasts-component>.is-toast:nth-child(2) { --nth-child: 2; }
.toasts-component>.is-toast:nth-child(3) { --nth-child: 3; }
.toasts-component>.is-toast:nth-child(4) { --nth-child: 4; }
.toasts-component>.is-toast:nth-child(n + 5) { --nth-child: 5; }

.is-toast {
	--_default-min-width: 250px;
	--_margin-left: calc(var(--_default-min-width) / 2 * -1);
	--_delta: 50px;
	--_fadein-duration: 1s;
	--_fadeout-duration: 3s;
	opacity: 0;
	font-weight: 500;
	min-width: var(--_default-min-width);
	margin-left: var(--_margin-left);
	background-color: var(--portfolio-default-toast-bg-color);
	color: var(--portfolio-default-toast-font-color);
	text-align: center;
	border-radius: 2px;
	padding: 16px;
	position: fixed;
	z-index: 1;
	left: 50%;
	bottom: 0;
	transition: bottom 2s, opacity var(--_fadeout-duration);
}

.is-toast.show {
	opacity: 1;
	bottom: calc(var(--_delta) * var(--nth-child));
	transition: bottom 2s, opacity var(--_fadein-duration);
}

.is-toast.error-box {
	background-color: var(--portfolio-chart-error-box-bg-color);
	color: var(--portfolio-chart-buttons-bg-color);
}

.gallery>.gallery-figure:nth-child(1) { --nth-child: 1; }
.gallery>.gallery-figure:nth-child(2) { --nth-child: 2; }
.gallery>.gallery-figure:nth-child(3) { --nth-child: 3; }
.gallery>.gallery-figure:nth-child(4) { --nth-child: 4; }
.gallery>.gallery-figure:nth-child(n + 5) { --nth-child: 5; }

.gallery>.gallery-figure {
	animation: galleryFadeIn calc(0.7s * var(--nth-child)) ease-in;
}

.gallery-figure img {
	height: 407px;
	width: 305px;
	object-fit: cover;
	margin-bottom: 0.5em;
}

.forgotten-password {
	color: inherit;
	font-weight: 500;
}

.footer {
	flex: 100%;
	display: flex;
	align-items: flex-end;
	justify-content: flex-end;
}

.reset-text-decoration {
	text-decoration: none;
	color: inherit;
}

.form input.is-narrow {
	height: 35px;
	font-size: 1em;
}

/** Navbar **/
.header {
	--_margin-delta: 22px;
	display: flex;
	justify-content: space-between;
	margin: var(--portfolio-page-margin) auto;
	min-width: 1150px;
}

.navbar-menu-elements>* {
	padding: 0 10px;
	font-size: 1.2em;
}

a:hover {
	color: #B1663C;
}

.navbar-menu {
	display: flex;
	align-items: center;
	height: 42px;
}

.navbar-menu-elements .navbar-img {
	position: relative;
	height: 21px;
	top: 2px;
}

.navbar-menu-elements {
	display: flex;
	align-items: center;
	list-style-type: none;
	justify-content: space-between;
	width: 320px;
}

.login h1 {
	font-family: 'Syne';
	font-weight: 700;
	font-size: 30px;
	color: #1D6154;
	margin-top: 80px;
}

